UI/src/Styles/Components/screen-overlay.sass
.screen-overlay
  background-color: rgba(0, 0, 0, 0.7)
  position: fixed
  top: 0
  right: -100%
  height: 100%
  width: 100%
  z-index: 1000
  transition: right 0.3s ease-in-out
  &.active
    right: 0
    padding-right: 0
  >.grid
    height: 100%
    grid-template-columns: auto 40%
  >.overlay-wide
    grid-template-columns: auto 70%
  aside
    background-color: rgba(var(--background-color-rgb), 0.8)
    border-left: solid 1px var(--primary)
    display: flex
    height: 100%
    overflow: scroll
    align-items: start
    justify-content: center
    > *
      width: 90%
    > article
      background: rgba(var(--card-background-color-rgb), 0.3)
      backdrop-filter: blur(3px)

